--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -513,11 +513,13 @@ struct kvm_mmu_page {
 
 ![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
 
-分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** 为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**. 这个**起始GPN**在`__direct_map()`中计算, 使用下面公式, 即`base_gfn`;
+分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** 为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**. 这个**起始GPN**在`__direct_map()`中会计算, 使用下面公式, 即`base_gfn`; gfn是标准页帧号(`gpa >> PAGE_SHIFT`, 全局唯一值, 4K页面的标准页帧号). 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。**缺页gfn**是**被管理的GEUST物理地址空间**中的**一个值**. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
 
 ```cpp
 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
 ```
+
+![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
 `mmu_valid_gen`：为有效版本号，KVM维护了一个全局的的gen number(`vcpu->kvm->arch.mmu_valid_gen`)，刚开始是**相同的**(在`kvm_mmu_alloc_page()`中初始化.), 如果该域与全局的gen number不相等，则将该页标记为invalid page。该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将`vcpu->kvm->arch.mmu_valid_gen`加1，那么当前**所有的MMU页结构**都变成了**invalid**，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。 当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`**手动废弃**掉**所有的MMU页结构**。
 
