--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -482,9 +482,11 @@ index4用来索引level 4影子页表的中的SPTE，index3用来索引level3级
 	(((address) >> PT64_LEVEL_SHIFT(level)) & ((1 << PT64_LEVEL_BITS) - 1))
 ```
 
-**每级页表**的**页表项**都会管理**一定宽度的物理地址空间**，比如**level 1级页表**的**每个页表项**就可以管理 `1<< 12` 大小的物理地址空间，这个宽度就是**页大小**
+**每级页表**的**页表项**都会管理**一定宽度的物理地址空间**，比如
 
-**level 2 级页表**的**一个页表项**管理地址空间的大小就是  `1 << (12 + 9)` ，即
+- **level 1级页表**的**每个页表项**就可以管理 `1<< 12` 大小的物理地址空间，这个宽度就是**页大小**, 4KB
+
+- **level 2 级页表**的**一个页表项**管理地址空间的大小就是 `1 << (12 + 9)` ，即2MB
 
 `1 << (12 + (2  - 1) * 9)`
 
@@ -1278,7 +1280,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 ![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
-KVM中利用起始gfn(base_gfn)在哈希表`arch.mmu_page_hash[]`上，快速的查找**管理该物理地址空间的页表页**是否**已经被分配**了，代码如下
+KVM中利用起始gfn(`base_gfn`)在哈希表`arch.mmu_page_hash[]`上，快速的查找**管理该物理地址空间的页表页**是否**已经被分配**了，代码如下
 
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
