--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -496,11 +496,11 @@ index4用来索引level 4影子页表的中的SPTE，index3用来索引level3级
 
 所以 **level级页表**的**页表项**管理**地址空间大小** = `1ULL << (PAGE_SHIFT + (((level) - 1) * PT64_LEVEL_BITS)`
 
-**每个level级页表**的**页表项**内所管理的**地址**都是按照**大小对齐的**。
+**每个level级页表**的**页表项**内所管理的**地址**都是按照**大小对齐的！！！**。
 
 **掩码**就是用于**对齐的位都是0**，其余位**都是1**。 
 
-`地址 & MASK`，得到的就是**该地址**的**level级页表**的**页表项**所管理地址**地址空间的起始地址**，该地址的大小是同level级页表的**页表项**管理地址**空间大小对齐**的
+`地址 & MASK`，得到的就是**该地址**的**level级页表**的**页表项！！！** 所**管理地址空间！！！的起始地址！！！**，该地址的大小是同level级页表的**页表项**管理地址**空间大小对齐**的
 
 KVM代码中有相应的宏来**计算MASK**，用来**对gaddr进行取整**操作
 
@@ -1280,8 +1280,6 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 ![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
-KVM中利用起始gfn(`base_gfn`)在哈希表`arch.mmu_page_hash[]`上，快速的查找**管理该物理地址空间的页表页**是否**已经被分配**了，代码如下
-
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
 循环中首先判断**entry的level**和**请求的level**是否相等，
@@ -1402,11 +1400,15 @@ out:
 
 一个`kvm_mmu_page`对应于一个`kvm_mmu_page_role`，`kvm_mmu_page_role`记录对应**page的各种属性**。
 
-下面`for_each_valid_sp`是一个遍历链表的宏定义，KVM为了根据**GFN**查找对应的`kvm_mmu_page`，用一个**HASH数组**记录**所有**的`kvm_mmu_page`，**每一个表项**都是一个**链表头**，即根据GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
+下面`for_each_valid_sp`是一个遍历链表的宏定义，KVM为了根据**GFN**查找对应的`kvm_mmu_page`，用一个**HASH数组**记录**所有**的`kvm_mmu_page`，**每一个表项**都是一个**链表头**，即根据起始GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
 
 如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。
 
-这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到**哈希表**`vcpu->kvm->arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
+这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** (见上面)为key计算一个**hash值**，并上到**哈希表**`vcpu->kvm->arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**(即上面的`for_each_valid_sp`)；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
+
+
+一个缺页gfn，既在level3页表页的管理空间内，也在level2页表页的管理空间内，那么gfn应该是哪个页表页的起始gfn呢？答案很简单，是level2的起始gfn。因为在__direct_map函数中，是从level4逐级往下处理的，当处理level3页表页的spte的时候，gfn为level3页表页管理GUEST物理地址空间的起始gfn，单发现已经有了指向level2页表页的基地址了，就不会调用kvm_mmu_get_page了；下一次循环的时候，gfn就被变更为level2页表页管理GUEST物理地址空间的起始gfn了，而spte中没有指向level1页表页基地址的指针，才会调用kvm_mmu_get_page，这时候传入的gfn是level2页表页管理GUEST物理地址空间的起始gfn。
+
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
