--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -513,7 +513,7 @@ struct kvm_mmu_page {
 
 ![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
 
-分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** 为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**. 这个**起始GPN**在`__direct_map()`中会计算, 使用下面公式, 即`base_gfn`; gfn是标准页帧号(`gpa >> PAGE_SHIFT`, 全局唯一值, 4K页面的标准页帧号). 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。**缺页gfn**是**被管理的GEUST物理地址空间**中的**一个值**. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
+分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** 为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上(在`kvm_mmu_get_page()`中)，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**. 这个**起始GPN**在`__direct_map()`中会计算, 使用下面公式, 即`base_gfn`; gfn是标准页帧号(`gpa >> PAGE_SHIFT`, 全局唯一值, 4K页面的标准页帧号). 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。**缺页gfn**是**被管理的GEUST物理地址空间**中的**一个值**. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
 
 ```cpp
 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
