--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1316,6 +1316,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
         int collisions = 0;
         LIST_HEAD(invalid_list);
         // 设置该mmu page的属性
+        /*设置角色，重要的是level，代表本页表页在影子页表中的级别*/
         role = vcpu->arch.mmu->mmu_role.base;
         role.level = level;
         role.direct = direct;
@@ -1330,6 +1331,10 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
                 role.quadrant = quadrant;
         }
         /* 根据gfn遍历KVM维护的可用的mmu_page_hash哈希链表 */
+        /*
+         * c找页表页是否已经被其他上级的SPTE分配过了，如果是的话，就找到了,返回
+         * 注意需要将本次的parent_spte加入到反向链表中
+         */
         for_each_valid_sp(vcpu->kvm, sp, gfn) {
                 if (sp->gfn != gfn) {
                         collisions++;
@@ -1406,8 +1411,7 @@ out:
 
 这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** (见上面)为key计算一个**hash值**，并上到**哈希表**`vcpu->kvm->arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**(即上面的`for_each_valid_sp`)；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
-
-一个缺页gfn，既在level3页表页的管理空间内，也在level2页表页的管理空间内，那么gfn应该是哪个页表页的起始gfn呢？答案很简单，是level2的起始gfn。因为在__direct_map函数中，是从level4逐级往下处理的，当处理level3页表页的spte的时候，gfn为level3页表页管理GUEST物理地址空间的起始gfn，单发现已经有了指向level2页表页的基地址了，就不会调用kvm_mmu_get_page了；下一次循环的时候，gfn就被变更为level2页表页管理GUEST物理地址空间的起始gfn了，而spte中没有指向level1页表页基地址的指针，才会调用kvm_mmu_get_page，这时候传入的gfn是level2页表页管理GUEST物理地址空间的起始gfn。
+有个问题: 一个缺页gfn，既在level3页表页的管理空间内，也在level2页表页的管理空间内，那么gfn应该是哪个页表页的起始gfn呢？答案很简单，是level2的起始gfn。因为在`__direct_map`函数中，是从**level4逐级往下处理**的，当处理level3页表页的spte的时候，gfn为level3页表页管理GUEST物理地址空间的起始gfn，但发现**已经有了指向level2页表页的基地址**了，就不会调用kvm_mmu_get_page了；下一次循环的时候，gfn就被变更为level2页表页管理GUEST物理地址空间的起始gfn了，而spte中没有指向level1页表页基地址的指针，才会调用`kvm_mmu_get_page`，这时候**传入的gfn**是**level2页表页**管理**GUEST物理地址空间的起始gfn**。
 
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
