--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1332,7 +1332,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
         }
         /* 根据gfn遍历KVM维护的可用的mmu_page_hash哈希链表 */
         /*
-         * c找页表页是否已经被其他上级的SPTE分配过了，如果是的话，就找到了,返回
+         * 查找页表页是否已经被其他上级的SPTE分配过了，如果是的话，就找到了,返回
          * 注意需要将本次的parent_spte加入到反向链表中
          */
         for_each_valid_sp(vcpu->kvm, sp, gfn) {
