--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -521,11 +521,11 @@ base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
 
 ![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
-`mmu_valid_gen`：为有效版本号，KVM维护了一个全局的的gen number(`vcpu->kvm->arch.mmu_valid_gen`)，刚开始是**相同的**(在`kvm_mmu_alloc_page()`中初始化.), 如果该域与全局的gen number不相等，则将该页标记为invalid page。该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将`vcpu->kvm->arch.mmu_valid_gen`加1，那么当前**所有的MMU页结构**都变成了**invalid**，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。 当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`**手动废弃**掉**所有的MMU页结构**。
+`mmu_valid_gen`：为**有效版本号**，KVM维护了一个全局的的gen number(`vcpu->kvm->arch.mmu_valid_gen`)，刚开始是**相同的**(在`kvm_mmu_alloc_page()`中初始化.), 如果该域与全局的gen number不相等，则将该页标记为invalid page。该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将`vcpu->kvm->arch.mmu_valid_gen`加1，那么当前**所有的MMU页结构**都变成了**invalid**，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。 当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`**手动废弃**掉**所有的MMU页结构**。
 
 SPT/EPT页的struct page结构中`page->private`域会反向指向该`struct kvm_mmu_page`。同样是在`kvm_mmu_alloc_page()`中调用`set_page_private(virt_to_page(sp->spt), (unsigned long)sp)`设置.
 
-link: 表明不同状态. 同时只要是激活的页表页，也会加入`vcpu->kvm->arch.active_mmu_page`链表中，以便在后面快速的释放内存. 同样在`kvm_mmu_alloc_page()`中调用`list_add(&sp->link, &vcpu->kvm->arch.active_mmu_pages)`设置
+link: 表明**不同状态**. 同时只要是激活的页表页，也会加入`vcpu->kvm->arch.active_mmu_page`链表中，以便在后面快速的释放内存. 同样在`kvm_mmu_alloc_page()`中调用`list_add(&sp->link, &vcpu->kvm->arch.active_mmu_pages)`设置
 
 # 8. 参考
 
