--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1373,8 +1373,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
         /* 设置所管理GUEST物理地址空间的起始gfn和level角色 */
         sp->gfn = gfn;
         sp->role = role;
-        /*把该也作为一个节点加入到哈希表相应的链表汇总*/
-        // 根据管理的虚拟机物理地址的起始GFN为key计算一个hash值
+        /* 以所管理GUEST物理地址空间的起始gfn为key，加入到hash表arch.mmu_page_hash中 */
         hlist_add_head(&sp->hash_link,
                 &vcpu->kvm->arch.mmu_page_hash[kvm_page_table_hashfn(gfn)]);
         if (!direct) {
@@ -1412,6 +1411,31 @@ out:
 这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN！！！** (见上面)为key计算一个**hash值**，并上到**哈希表**`vcpu->kvm->arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**(即上面的`for_each_valid_sp`)；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
 有个问题: 一个缺页gfn，既在level3页表页的管理空间内，也在level2页表页的管理空间内，那么gfn应该是哪个页表页的起始gfn呢？答案很简单，是level2的起始gfn。因为在`__direct_map`函数中，是从**level4逐级往下处理**的，当处理level3页表页的spte的时候，gfn为level3页表页管理GUEST物理地址空间的起始gfn，但发现**已经有了指向level2页表页的基地址**了，就不会调用kvm_mmu_get_page了；下一次循环的时候，gfn就被变更为level2页表页管理GUEST物理地址空间的起始gfn了，而spte中没有指向level1页表页基地址的指针，才会调用`kvm_mmu_get_page`，这时候**传入的gfn**是**level2页表页**管理**GUEST物理地址空间的起始gfn**。
+
+##### kvm_mmu_alloc_page(): 申请一个存放页表页
+
+```cpp
+static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct)
+{
+        struct kvm_mmu_page *sp;
+
+        sp = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_header_cache);
+        sp->spt = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
+        if (!direct)
+                sp->gfns = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
+        set_page_private(virt_to_page(sp->spt), (unsigned long)sp);
+
+        /*
+         * active_mmu_pages must be a FIFO list, as kvm_zap_obsolete_pages()
+         * depends on valid pages being added to the head of the list.  See
+         * comments in kvm_zap_obsolete_pages().
+         */
+        sp->mmu_valid_gen = vcpu->kvm->arch.mmu_valid_gen;
+        list_add(&sp->link, &vcpu->kvm->arch.active_mmu_pages);
+        kvm_mod_used_mmu_pages(vcpu->kvm, +1);
+        return sp;
+}
+```
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
