--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -24,6 +24,11 @@
     - [9.2.2. kvm_tdp_page_fault(): 建立页表项](#922-kvm_tdp_page_fault-建立页表项)
       - [9.2.2.1. fast_page_fault(): 快速处理](#9221-fast_page_fault-快速处理)
       - [9.2.2.2. try_async_pf(): GPA到HPA的转换](#9222-try_async_pf-gpa到hpa的转换)
+      - [9.2.2.3. __direct_map(): 构建页表核心](#9223-__direct_map-构建页表核心)
+        - [9.2.2.3.1. kvm_mmu_get_page: 创建页表页](#92231-kvm_mmu_get_page-创建页表页)
+        - [9.2.2.3.2. kvm_mmu_alloc_page(): 申请一个存放页表页](#92232-kvm_mmu_alloc_page-申请一个存放页表页)
+      - [9.2.2.4. kvm_tdp_page_fault 小结](#9224-kvm_tdp_page_fault-小结)
+- [10. 参考](#10-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1188,13 +1193,13 @@ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页
       |   └─ return __gfn_to_hva_memslot();
       |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
       └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断
- ```
+```
 
 GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
 - `gfn_to_hva`: 首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是**GPA的客户物理页号**到宿主虚拟地址的映射。
 - `hva_to_pfn`: 利用获得的gfn到hva的映射，完成**宿主机**上的**虚拟地址**(该虚拟地址为**gfn对应的虚拟地址**)到**物理地址的转换**，进而获得**宿主机物理页框号**pfn。此转换可能涉及**宿主机物理页缺页！！！**，需要**请求分配该页！！！**。
 
-#### __direct_map(): 构建页表核心
+#### 9.2.2.3. __direct_map(): 构建页表核心
 
 `__direct_map()`是构建页表的核心函数, 
 
@@ -1290,7 +1295,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** (叶子节点, 直接映射真正的物理页面pfn)的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
 
-##### kvm_mmu_get_page: 创建页表页
+##### 9.2.2.3.1. kvm_mmu_get_page: 创建页表页
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
@@ -1390,7 +1395,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
                 if (level > PT_PAGE_TABLE_LEVEL && need_sync)
                         flush |= kvm_sync_pages(vcpu, gfn, &invalid_list);
         }
-        // 暂时对所有表项清零
+        /*初始化清空页表页中所有的SPTE为0*/
         clear_page(sp->spt);
         trace_kvm_mmu_get_page(sp, true);
 
@@ -1412,7 +1417,7 @@ out:
 
 有个问题: 一个缺页gfn，既在level3页表页的管理空间内，也在level2页表页的管理空间内，那么gfn应该是哪个页表页的起始gfn呢？答案很简单，是level2的起始gfn。因为在`__direct_map`函数中，是从**level4逐级往下处理**的，当处理level3页表页的spte的时候，gfn为level3页表页管理GUEST物理地址空间的起始gfn，但发现**已经有了指向level2页表页的基地址**了，就不会调用kvm_mmu_get_page了；下一次循环的时候，gfn就被变更为level2页表页管理GUEST物理地址空间的起始gfn了，而spte中没有指向level1页表页基地址的指针，才会调用`kvm_mmu_get_page`，这时候**传入的gfn**是**level2页表页**管理**GUEST物理地址空间的起始gfn**。
 
-##### kvm_mmu_alloc_page(): 申请一个存放页表页
+##### 9.2.2.3.2. kvm_mmu_alloc_page(): 申请一个存放页表页
 
 ```cpp
 static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct)
@@ -1423,7 +1428,7 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
         sp->spt = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
         if (!direct)
                 sp->gfns = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
-        // 
+        // SPT/EPT页的struct page结构中page->private域会反向指向该struct kvm_mmu_page
         set_page_private(virt_to_page(sp->spt), (unsigned long)sp);
 
         /*
@@ -1431,7 +1436,9 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
          * depends on valid pages being added to the head of the list.  See
          * comments in kvm_zap_obsolete_pages().
          */
+        // 初始化有效版本号, 初始化等于vcpu->kvm->arch.mmu_valid_gen
         sp->mmu_valid_gen = vcpu->kvm->arch.mmu_valid_gen;
+        // 加入链表, 以便后面快速的释放内存
         list_add(&sp->link, &vcpu->kvm->arch.active_mmu_pages);
         kvm_mod_used_mmu_pages(vcpu->kvm, +1);
         return sp;
@@ -1440,7 +1447,7 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-#### kvm_tdp_page_fault 小结
+#### 9.2.2.4. kvm_tdp_page_fault 小结
 
 在**非fast page fault**，**非异步page fault**时:
 
@@ -1461,7 +1468,7 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
 
-# 9. 参考
+# 10. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
 
