--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -9,7 +9,7 @@
 - [4. kvm中与mmu相关成员](#4-kvm中与mmu相关成员)
 - [5. kvm_vcpu中与mmu相关成员](#5-kvm_vcpu中与mmu相关成员)
 - [6. kvm_mmu 结构体: vMMU数据结构](#6-kvm_mmu-结构体-vmmu数据结构)
-- [7. kvm_mmu_page: 影子页表页的管理结构](#7-kvm_mmu_page-影子页表页的管理结构)
+- [7. kvm_mmu_page: 影子页表页](#7-kvm_mmu_page-影子页表页)
 - [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
@@ -440,7 +440,7 @@ union kvm_mmu_page_role {
 };
 ```
 
-# 7. kvm_mmu_page: 影子页表页的管理结构
+# 7. kvm_mmu_page: 影子页表页
 
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
@@ -500,6 +500,8 @@ struct kvm_mmu_page {
         atomic_t write_flooding_count;
 };
 ```
+
+页分为**两类**，物理页和页表页，但是我之前没有说的一点是，页表页本身也被分为两类，高层级（level-4 to level-2）的页表页，和最后一级（level-1）的页表页。
 
 影子页表页，shadow page，就是**装载影子页表**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。
 
