--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -501,7 +501,7 @@ struct kvm_mmu_page {
 };
 ```
 
-页分为**两类**，物理页和页表页，但是我之前没有说的一点是，页表页本身也被分为两类，高层级（level-4 to level-2）的页表页，和最后一级（level-1）的页表页。
+页分为**两类**，**物理页**和**页表页**，而**页表页**本身也被分为**两类**，**高层级（level-4 to level-2）的页表页**，和**最后一级（level-1）的页表页**。
 
 影子页表页，shadow page，就是**装载影子页表**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。
 
