--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -28,6 +28,7 @@
         - [9.2.2.3.1. kvm_mmu_get_page: 创建页表页](#92231-kvm_mmu_get_page-创建页表页)
         - [9.2.2.3.2. kvm_mmu_alloc_page(): 申请一个存放页表页](#92232-kvm_mmu_alloc_page-申请一个存放页表页)
       - [9.2.2.4. kvm_tdp_page_fault 小结](#9224-kvm_tdp_page_fault-小结)
+- [逆向映射机制](#逆向映射机制)
 - [10. 参考](#10-参考)
 
 <!-- /code_chunk_output -->
@@ -1467,6 +1468,9 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
 3. 调用`kvm_mmu_alloc_page`创建新的struct kvm_mmu_page
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
+
+# 逆向映射机制
+
 
 # 10. 参考
 
