--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -35,6 +35,8 @@
 
 # 1. 背景
 
+**KVM并不负责物理页面的分配**，而是**qemu分配后**把**对应的地址传递过来**，然后**KVM维护EPT**。也就是说，在**qemu进程建立页表**后，**EPT才会建立**。
+
 在虚拟化环境下，intel CPU在处理器级别加入了对内存虚拟化的支持。即扩展页表EPT，而AMD也有类似的成为NPT。在此之前，内存虚拟化使用的一个重要技术为影子页表。
 
 在**虚拟化环境**下，虚拟机使用的是**客户机虚拟地址GVA**，而其**本身页表机制**只能把**客户机的虚拟地址**转换成**客户机的物理地址**也就是完成`GVA->GPA`的转换，但是GPA并不是被用来真正的访存，所以需要想办法把**客户机的物理地址GPA**转换成**宿主机的物理地址HPA**。
