--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -24,6 +24,8 @@
     - [9.2.2. kvm_tdp_page_fault(): 建立页表项](#922-kvm_tdp_page_fault-建立页表项)
       - [9.2.2.1. fast_page_fault(): 快速处理](#9221-fast_page_fault-快速处理)
       - [9.2.2.2. try_async_pf(): GPA到HPA的转换](#9222-try_async_pf-gpa到hpa的转换)
+        - [__gfn_to_hva_many(): 虚拟机页框号(gfn)得到qemu中分配的页面的HVA](#__gfn_to_hva_many-虚拟机页框号gfn得到qemu中分配的页面的hva)
+        - [hva_to_pfn(): 主机虚拟地址(HVA)得到主机物理页框号(HPA)](#hva_to_pfn-主机虚拟地址hva得到主机物理页框号hpa)
       - [9.2.2.3. __direct_map(): 构建页表核心](#9223-__direct_map-构建页表核心)
         - [9.2.2.3.1. kvm_mmu_get_page: 创建页表页](#92231-kvm_mmu_get_page-创建页表页)
         - [9.2.2.3.2. kvm_mmu_alloc_page(): 申请一个存放页表页](#92232-kvm_mmu_alloc_page-申请一个存放页表页)
@@ -1188,6 +1190,8 @@ pass
 
 #### 9.2.2.2. try_async_pf(): GPA到HPA的转换
 
+**KVM并不负责物理页面的分配**，而是**qemu分配后**把**对应的地址传递过来**，然后**KVM维护EPT**。也就是说，在**qemu进程建立页表**后，**EPT才会建立**。
+
 ```cpp
 try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
  ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
@@ -1201,6 +1205,16 @@ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页
 GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
 - `gfn_to_hva`: 首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是**GPA的客户物理页号**到宿主虚拟地址的映射。
 - `hva_to_pfn`: 利用获得的gfn到hva的映射，完成**宿主机**上的**虚拟地址**(该虚拟地址为**gfn对应的虚拟地址**)到**物理地址的转换**，进而获得**宿主机物理页框号**pfn。此转换可能涉及**宿主机物理页缺页！！！**，需要**请求分配该页！！！**。
+
+##### __gfn_to_hva_many(): 虚拟机页框号(gfn)得到qemu中分配的页面的HVA
+
+
+
+##### hva_to_pfn(): 主机虚拟地址(HVA)得到主机物理页框号(HPA)
+
+```cpp
+
+```
 
 #### 9.2.2.3. __direct_map(): 构建页表核心
 
