--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1347,7 +1347,13 @@ exit:
         up_read(&current->mm->mmap_sem);
         return pfn;
 }
+```
 
+在本函数中涉及到两个重要函数`hva_to_pfn_fast`和`hva_to_pfn_slow`，首选是前者，在**前者失败**后，调用后者。
+
+`hva_to_pfn_fast`核心是调用了`__get_user_pages_fast`函数，而`hva_to_pfn_slow`函数的主体其实是`get_user_pages_fast`函数，可以看到这里两个函数就差了一个前缀，前者**默认页表项已经存在**，直接通过**遍历页表得到对应的页框**；而后者不做这种假设，如果有页表项没有建立，还需要建立页表项，物理页面没有分配就需要分配物理页面。考虑到这里是KVM，在开始EPT violation时候，虚拟地址肯定没有分配具体的物理地址，所以这里调用后者的可能性比较大。get_user_pages_fast函数的前半部分基本就是__get_user_pages_fast，所以这里我们简要分析下get_user_pages_fast函数。
+
+```cpp
 /*
  * The fast path to get the writable pfn which will be stored in @pfn,
  * true indicates success, otherwise false is returned.  It's also the
@@ -1377,6 +1383,45 @@ static bool hva_to_pfn_fast(unsigned long addr, bool write_fault,
         }
 
         return false;
+}
+
+/*
+ * The slow path to get the pfn of the specified host virtual address,
+ * 1 indicates success, -errno is returned if error is detected.
+ */
+static int hva_to_pfn_slow(unsigned long addr, bool *async, bool write_fault,
+                           bool *writable, kvm_pfn_t *pfn)
+{
+        unsigned int flags = FOLL_HWPOISON;
+        struct page *page;
+        int npages = 0;
+
+        might_sleep();
+
+        if (writable)
+                *writable = write_fault;
+
+        if (write_fault)
+                flags |= FOLL_WRITE;
+        if (async)
+                flags |= FOLL_NOWAIT;
+
+        npages = get_user_pages_unlocked(addr, 1, &page, flags);
+        if (npages != 1)
+                return npages;
+
+        /* map read fault as writable if possible */
+        if (unlikely(!write_fault) && writable) {
+                struct page *wpage;
+
+                if (__get_user_pages_fast(addr, 1, 1, &wpage) == 1) {
+                        *writable = true;
+                        put_page(page);
+                        page = wpage;
+                }
+        }
+        *pfn = page_to_pfn(page);
+        return npages;
 }
 ```
 
