--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1425,9 +1425,56 @@ static int hva_to_pfn_slow(unsigned long addr, bool *async, bool write_fault,
 }
 ```
 
+```cpp
+/*
+ * Like get_user_pages_fast() except it's IRQ-safe in that it won't fall back to
+ * the regular GUP.
+ * Note a difference with get_user_pages_fast: this always returns the
+ * number of pages pinned, 0 if no pages were pinned.
+ *
+ * If the architecture does not support this function, simply return with no
+ * pages pinned.
+ */
+int __get_user_pages_fast(unsigned long start, int nr_pages, int write,
+                          struct page **pages)
+{
+        unsigned long len, end;
+        unsigned long flags;
+        int nr = 0;
+
+        start = untagged_addr(start) & PAGE_MASK;
+        len = (unsigned long) nr_pages << PAGE_SHIFT;
+        end = start + len;
+
+        if (end <= start)
+                return 0;
+        if (unlikely(!access_ok((void __user *)start, len)))
+                return 0;
+
+        /*
+         * Disable interrupts.  We use the nested form as we can already have
+         * interrupts disabled by get_futex_key.
+         *
+         * With interrupts disabled, we block page table pages from being
+         * freed from under us. See struct mmu_table_batch comments in
+         * include/asm-generic/tlb.h for more details.
+         *
+         * We do not adopt an rcu_read_lock(.) here as we also want to
+         * block IPIs that come from THPs splitting.
+         */
+
+        if (IS_ENABLED(CONFIG_HAVE_FAST_GUP) &&
+            gup_fast_permitted(start, end)) {
+                local_irq_save(flags);
+                gup_pgd_range(start, end, write ? FOLL_WRITE : 0, pages, &nr);
+                local_irq_restore(flags);
+        }
+
+        return nr;
+}
 ```
 
-```
+函数开始获取**虚拟页框号**和**结束地址**，在咱们分析的情况下，一般这里就是一个页面的大小。然后调用local_irq_disable禁止本地中断，开始遍历当前进程的页表。pgdp是在页目录表中的偏移+一级页表基址。进入while循环，获取二级表的基址，next在这里基本就是end了，因为前面申请的仅仅是一个页面的长度。可以看到这里如果表项内容为空，则goto到了slow，即要为其建立表项。这里暂且略过。先假设其存在，继续调用gup_pud_range函数。在x86架构下，使用的二级页表而在64位下使用四级页表。64位暂且不考虑，所以中间两层处理其实就是走个过场。这里直接把pgdp指针转成了pudp即pud_t类型的指针，接下来还是进行同样的工作，只不过接下来调用的是gup_pmd_range函数，该函数取出表项的内容，往下一级延伸，重点看其调用的gup_pte_range函数。
 
 #### 9.2.2.3. __direct_map(): 构建页表核心
 
