--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1474,7 +1474,7 @@ int __get_user_pages_fast(unsigned long start, int nr_pages, int write,
 }
 ```
 
-函数开始获取**虚拟页框号**和**结束地址**，在咱们分析的情况下，一般这里就是一个页面的大小。然后调用local_irq_disable禁止本地中断，开始遍历当前进程的页表。pgdp是在页目录表中的偏移+一级页表基址。进入while循环，获取二级表的基址，next在这里基本就是end了，因为前面申请的仅仅是一个页面的长度。可以看到这里如果表项内容为空，则goto到了slow，即要为其建立表项。这里暂且略过。先假设其存在，继续调用gup_pud_range函数。在x86架构下，使用的二级页表而在64位下使用四级页表。64位暂且不考虑，所以中间两层处理其实就是走个过场。这里直接把pgdp指针转成了pudp即pud_t类型的指针，接下来还是进行同样的工作，只不过接下来调用的是gup_pmd_range函数，该函数取出表项的内容，往下一级延伸，重点看其调用的gup_pte_range函数。
+函数开始获取**虚拟页框号**和**结束地址**，在咱们分析的情况下，一般这里就是一个页面的大小。然后调用local_irq_disable禁止本地中断，开始遍历**当前进程的页表**。pgdp是在页目录表中的偏移+一级页表基址。进入while循环，获取二级表的基址，next在这里基本就是end了，因为前面申请的仅仅是一个页面的长度。可以看到这里如果表项内容为空，则goto到了slow，即要为其建立表项。这里暂且略过。先假设其存在，继续调用`gup_pud_range`函数。在x86架构下，使用的二级页表而在64位下使用四级页表。64位暂且不考虑，所以中间两层处理其实就是走个过场。这里直接把pgdp指针转成了pudp即pud_t类型的指针，接下来还是进行同样的工作，只不过接下来调用的是`gup_pmd_range`函数，该函数取出表项的内容，往下一级延伸，重点看其调用的`gup_pte_range`函数。
 
 #### 9.2.2.3. __direct_map(): 构建页表核心
 
