--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1476,6 +1476,74 @@ int __get_user_pages_fast(unsigned long start, int nr_pages, int write,
 
 函数开始获取**虚拟页框号**和**结束地址**，在咱们分析的情况下，一般这里就是一个页面的大小。然后调用local_irq_disable禁止本地中断，开始遍历**当前进程的页表**。pgdp是在页目录表中的偏移+一级页表基址。进入while循环，获取二级表的基址，next在这里基本就是end了，因为前面申请的仅仅是一个页面的长度。可以看到这里如果表项内容为空，则goto到了slow，即要为其建立表项。这里暂且略过。先假设其存在，继续调用`gup_pud_range`函数。在x86架构下，使用的二级页表而在64位下使用四级页表。64位暂且不考虑，所以中间两层处理其实就是走个过场。这里直接把pgdp指针转成了pudp即pud_t类型的指针，接下来还是进行同样的工作，只不过接下来调用的是`gup_pmd_range`函数，该函数取出表项的内容，往下一级延伸，重点看其调用的`gup_pte_range`函数。
 
+
+```cpp
+static int gup_pte_range(pmd_t pmd, unsigned long addr, unsigned long end,
+                         unsigned int flags, struct page **pages, int *nr)
+{
+        struct dev_pagemap *pgmap = NULL;
+        int nr_start = *nr, ret = 0;
+        pte_t *ptep, *ptem;
+
+        ptem = ptep = pte_offset_map(&pmd, addr);
+        do {
+                pte_t pte = gup_get_pte(ptep);
+                struct page *head, *page;
+
+                /*
+                 * Similar to the PMD case below, NUMA hinting must take slow
+                 * path using the pte_protnone check.
+                 */
+                if (pte_protnone(pte))
+                        goto pte_unmap;
+
+                if (!pte_access_permitted(pte, flags & FOLL_WRITE))
+                        goto pte_unmap;
+
+                if (pte_devmap(pte)) {
+                        if (unlikely(flags & FOLL_LONGTERM))
+                                goto pte_unmap;
+
+                        pgmap = get_dev_pagemap(pte_pfn(pte), pgmap);
+                        if (unlikely(!pgmap)) {
+                                undo_dev_pagemap(nr, nr_start, pages);
+                                goto pte_unmap;
+                        }
+                } else if (pte_special(pte))
+                        goto pte_unmap;
+
+                VM_BUG_ON(!pfn_valid(pte_pfn(pte)));
+                page = pte_page(pte);
+
+                head = try_get_compound_head(page, 1);
+                if (!head)
+                        goto pte_unmap;
+
+                if (unlikely(pte_val(pte) != pte_val(*ptep))) {
+                        put_page(head);
+                        goto pte_unmap;
+                }
+
+                VM_BUG_ON_PAGE(compound_head(page) != head, page);
+
+                SetPageReferenced(page);
+                pages[*nr] = page;
+                (*nr)++;
+
+        } while (ptep++, addr += PAGE_SIZE, addr != end);
+
+        ret = 1;
+
+pte_unmap:
+        if (pgmap)
+                put_dev_pagemap(pgmap);
+        pte_unmap(ptem);
+        return ret;
+}
+```
+
+这里就根据pmd和虚拟地址的二级偏移，定位到二级页表项的地址ptep，在循环中，就取出ptep的内容，不出意外就是物理页面的地址及pfn，后面调用了page = pte_page(pte);实质是把pfn转成了page结构，然后设置参数中的page数组。没有错误就返回1. 上面就是整个页表遍历的过程。如果**失败**了，就为其**维护页表**并**分配物理页面**，注意这里如果当初申请的是多个页面，就一并处理了，而不是一个页面一个页面的处理。实现的主体是get_user_pages函数，该函数是__get_user_pages函数的封装，__get_user_pages比较长，我们这里就不在介绍，感兴趣的朋友可以参考具体的代码或者其他资料。
+
 #### 9.2.2.3. __direct_map(): 构建页表核心
 
 `__direct_map()`是构建页表的核心函数, 
@@ -1757,3 +1825,5 @@ https://blog.csdn.net/leoufung/article/details/52661968
 https://blog.csdn.net/xelatex_kvm/article/details/17685123
 
 https://blog.csdn.net/leoufung/article/details/48781123(未整理)
+
+https://www.cnblogs.com/ck1020/p/6753206.html(未完)
