--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -808,12 +808,31 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 vcpu_enter_guest()
   kvm_mmu_reload(vcpu)
     kvm_mmu_load(vcpu);
-      mmu_topup_memory_caches(vcpu); // 分配缓存池
+      mmu_topup_memory_caches(vcpu); // 从缓存中分配vcpu->arch.mmu_pte_list_desc_cache 和 vcpu->arch.mmu_page_header_cache
       mmu_alloc_roots(vcpu); // 初始化根目录的页面
       kvm_mmu_sync_roots(vcpu);
       kvm_mmu_load_pgd(vcpu); // 加载pgd, 即cr3
         kvm_x86_ops->load_mmu_pgd(vcpu, vcpu->arch.mmu->root_hpa); // 调用 vmx_load_mmu_pgd()
       kvm_x86_ops->tlb_flush(vcpu, true);
+```
+
+```cpp
+int kvm_mmu_load(struct kvm_vcpu *vcpu)
+{
+        int r;
+        // 从缓存中分配vcpu->arch.mmu_pte_list_desc_cache 和 vcpu->arch.mmu_page_header_cache
+        r = mmu_topup_memory_caches(vcpu);
+        if (r)
+                goto out;
+        r = mmu_alloc_roots(vcpu);
+        kvm_mmu_sync_roots(vcpu);
+        if (r)
+                goto out;
+        kvm_mmu_load_pgd(vcpu);
+        kvm_x86_ops->tlb_flush(vcpu, true);
+out:
+        return r;
+}
 ```
 
 ```cpp
