--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -836,6 +836,16 @@ out:
 ```
 
 ```cpp
+static int mmu_alloc_roots(struct kvm_vcpu *vcpu)
+{
+        if (vcpu->arch.mmu->direct_map)
+                return mmu_alloc_direct_roots(vcpu);
+        else
+                return mmu_alloc_shadow_roots(vcpu);
+}
+```
+
+```cpp
 void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
 {
         struct kvm *kvm = vcpu->kvm;
