--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -846,6 +846,53 @@ static int mmu_alloc_roots(struct kvm_vcpu *vcpu)
 ```
 
 ```cpp
+static int mmu_alloc_direct_roots(struct kvm_vcpu *vcpu)
+{
+        struct kvm_mmu_page *sp;
+        unsigned i;
+        // 根据当前vcpu的分页模式建立 ept顶层页表的管理结构
+        if (vcpu->arch.mmu->shadow_root_level >= PT64_ROOT_4LEVEL) {
+                spin_lock(&vcpu->kvm->mmu_lock);
+                if(make_mmu_pages_available(vcpu) < 0) {
+                        spin_unlock(&vcpu->kvm->mmu_lock);
+                        return -ENOSPC;
+                }
+                //为PML4T的地址
+                sp = kvm_mmu_get_page(vcpu, 0, 0,
+                                vcpu->arch.mmu->shadow_root_level, 1, ACC_ALL);
+                ++sp->root_count;
+                spin_unlock(&vcpu->kvm->mmu_lock);
+                vcpu->arch.mmu->root_hpa = __pa(sp->spt);
+        } else if (vcpu->arch.mmu->shadow_root_level == PT32E_ROOT_LEVEL) {
+                for (i = 0; i < 4; ++i) {
+                        hpa_t root = vcpu->arch.mmu->pae_root[i];
+
+                        MMU_WARN_ON(VALID_PAGE(root));
+                        spin_lock(&vcpu->kvm->mmu_lock);
+                        if (make_mmu_pages_available(vcpu) < 0) {
+                                spin_unlock(&vcpu->kvm->mmu_lock);
+                                return -ENOSPC;
+                        }
+                        // 32地址bit[31:30]只需要4项,所以在这里都分配出来,可以减少以后vm-exit次数
+                        sp = kvm_mmu_get_page(vcpu, i << (30 - PAGE_SHIFT),
+                                        i << 30, PT32_ROOT_LEVEL, 1, ACC_ALL);
+                        root = __pa(sp->spt);
+                        ++sp->root_count;
+                        spin_unlock(&vcpu->kvm->mmu_lock);
+                        vcpu->arch.mmu->pae_root[i] = root | PT_PRESENT_MASK;
+                }
+                vcpu->arch.mmu->root_hpa = __pa(vcpu->arch.mmu->pae_root);
+        } else
+                BUG();
+
+        /* root_cr3 is ignored for direct MMUs. */
+        vcpu->arch.mmu->root_cr3 = 0;
+
+        return 0;
+}
+```
+
+```cpp
 void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
 {
         struct kvm *kvm = vcpu->kvm;
