--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -421,6 +421,7 @@ union kvm_mmu_page_role {
                 unsigned access:3;
                 // 表示该页是否有效
                 unsigned invalid:1;
+                // 记录了efer.nxe的值
                 unsigned nxe:1;
                 unsigned cr0_wp:1;
                 unsigned smep_andnot_wp:1;
@@ -442,6 +443,8 @@ union kvm_mmu_page_role {
 
 # 7. kvm_mmu_page: 影子页表页
 
+由于**gpa**对应的**hva已经存在**, 所以可以直接根据**gpa得到hpa**, `gfn_to_pfn`函数实现了这个功能. 但**该页**对应的**ept页表内存**却并未分配,所以kvm需要管理分页内存和页面映射. 为此kvm引入了`kvm_mmu_page`结构。
+
 kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页表的结构
 
 ```cpp
@@ -454,7 +457,8 @@ struct kvm_mmu_page {
         // 该域只对页结构的叶子节点有效，可以执行该页的翻译是否与guest的翻译一致。
         // 如果为false，则可能出现修改了该页中的pte但没有更新tlb，而guest读取了tlb中的数据，导致了不一致。
         bool unsync;
-        // 该页的generation number, 有效版本号。
+        // 该页的generation number, 有效版本号
+        // 用于和 kvm->arch.mmu_valid_gen 进行比较，比它小表示该页是invalid的
         u8 mmu_valid_gen;
         bool mmio_cached;
         bool lpage_disallowed; /* Can't be replaced by an equiv large page */
@@ -479,7 +483,7 @@ struct kvm_mmu_page {
         int root_count;          /* Currently serving as active root */
         // 记录该页结构下面有多少个子节点是unsync状态的
         unsigned int unsync_children;
-        // 指向上一级spt
+        // 指向上一级spt, 表示有哪些上一级页表页的页表项指向该页表页
         struct kvm_rmap_head parent_ptes; /* rmap pointers to parent sptes */
         // 记录了unsync的子结构的位图
         DECLARE_BITMAP(unsync_child_bitmap, 512);
