--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1846,7 +1846,9 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
         struct kvm_mmu_page *sp;
 
         sp = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_header_cache);
+        //  spt就是页框，用mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache)分配
         sp->spt = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
+        // gfn_t *gfns 用于影子页表的case
         if (!direct)
                 sp->gfns = mmu_memory_cache_alloc(&vcpu->arch.mmu_page_cache);
         // SPT/EPT页的struct page结构中page->private域会反向指向该struct kvm_mmu_page
