--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1890,9 +1890,9 @@ static void link_shadow_page(struct kvm_vcpu *vcpu, u64 *sptep,
                 spte |= SPTE_AD_DISABLED_MASK;
         else
                 spte |= shadow_accessed_mask;
-        // 设置页表项
+        // 设置页表项(sptep)指向下一级页表页(spte)
         mmu_spte_set(sptep, spte);
-        // 将上级页表项的parent_spte添加到当前页表页的patent_ptes链表中
+        // 将上级页表项的parent_spte添加到当前页表页(sp)的patent_ptes链表中
         mmu_page_add_parent_pte(vcpu, sp, sptep);
 
         if (sp->unsync_children || sp->unsync)
@@ -1907,6 +1907,53 @@ static void mmu_page_add_parent_pte(struct kvm_vcpu *vcpu,
                 return;
 
         pte_list_add(vcpu, parent_pte, &sp->parent_ptes);
+}
+
+/*
+ * About rmap_head encoding:
+ *
+ * If the bit zero of rmap_head->val is clear, then it points to the only spte
+ * in this rmap chain. Otherwise, (rmap_head->val & ~1) points to a struct
+ * pte_list_desc containing more mappings.
+ */
+
+/*
+ * Returns the number of pointers in the rmap chain, not counting the new one.
+ */
+static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
+                        struct kvm_rmap_head *rmap_head)
+{
+        struct pte_list_desc *desc;
+        int i, count = 0;
+        //sp首次初始化时sp->parent_ptes = parent_pte
+        if (!rmap_head->val) {
+                rmap_printk("pte_list_add: %p %llx 0->1\n", spte, *spte);
+                rmap_head->val = (unsigned long)spte;
+        } else if (!(rmap_head->val & 1)) { //第二次时
+                rmap_printk("pte_list_add: %p %llx 1->many\n", spte, *spte);
+                desc = mmu_alloc_pte_list_desc(vcpu);
+                desc->sptes[0] = (u64 *)rmap_head->val;
+                desc->sptes[1] = spte;
+                rmap_head->val = (unsigned long)desc | 1;
+                ++count;
+        } else {
+                // 以后在增加时由于desc已存在不需再alloc
+                rmap_printk("pte_list_add: %p %llx many->many\n", spte, *spte);
+                desc = (struct pte_list_desc *)(rmap_head->val & ~1ul);
+                while (desc->sptes[PTE_LIST_EXT-1] && desc->more) {
+                        desc = desc->more;
+                        count += PTE_LIST_EXT;
+                }
+                // 当sptes数量太多时用more链表来管理
+                if (desc->sptes[PTE_LIST_EXT-1]) {
+                        desc->more = mmu_alloc_pte_list_desc(vcpu);
+                        desc = desc->more;
+                }
+                for (i = 0; desc->sptes[i]; ++i)
+                        ++count;
+                desc->sptes[i] = spte;
+        }
+        return count;
 }
 ```
 
