--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1957,6 +1957,25 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 }
 ```
 
+由于spte的地址只可能是8的倍数，所以其第一位肯定是0，那么我们就利用这个特点：
+
+- 我们用一个 unsignedlong * 来表示 pte_list ；
+
+- 如果这个 pte_list 为空，则表示这个之前没有创建过，那么将其赋值，即上文中 0->1 的情况；
+
+- 如果这个 pte_list 不为空，但是其第一位是，则表示这个rmap之前已经被设置了一个值，那么需要将这个 pte_list 的值改为某个 struct pte_list_desc 的地址，然后将第一位设成 ，来表示该地址并不是单纯的一个spte的地址，而是指向某个 structpte_list_desc ，这是上文中 1->many 的情况；
+
+- 如果这个 pte_list 不为空，而且其第一位是，那么通过访问由这个地址得到`struct pte_list_desc` ，得到更多的sptes，即上文中 many->many 的情况。
+
+struct pte_list_desc 结构定义如下：
+
+```cpp
+struct pte_list_desc {
+        u64 *sptes[PTE_LIST_EXT];
+        struct pte_list_desc *more;
+};
+```
+
 #### 9.2.2.4. kvm_tdp_page_fault 小结
 
 在**非fast page fault**，**非异步page fault**时:
