--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1970,13 +1970,14 @@ static int pte_list_add(struct kvm_vcpu *vcpu, u64 *spte,
 struct pte_list_desc 结构定义如下：
 
 ```cpp
+#define PTE_LIST_EXT 3
 struct pte_list_desc {
         u64 *sptes[PTE_LIST_EXT];
         struct pte_list_desc *more;
 };
 ```
 
-它是一个单链表的节点，每个节点都存有3个spte的地址，以及下一个节点的位置。这个反向映射用于如下case:如操作系统需要进行页面回收或换出，如果宿主机需要把某个客户机物理页换到disk，那么它就需要修改这个页的物理地址gpa对应的spte，将其设置成不存在。 反向映射的遍历函数如下：
+它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及**下一个节点的位置**。这个反向映射用于如下case:如操作系统需要进行页面回收或换出，如果宿主机需要把某个客户机物理页换到disk，那么它就需要修改这个页的物理地址gpa对应的spte，将其设置成不存在。 反向映射的遍历函数如下：
 
 
 
