--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1977,7 +1977,9 @@ struct pte_list_desc {
 };
 ```
 
-它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及**下一个节点的位置**。这个**反向映射**用于如下case:如操作系统需要进行**页面回收或换出**，如果**宿主机**需要把**某个客户机物理页**换到**disk**，那么它就需要**修改这个页的物理地址gpa**对应的**spte**，将其设置成**不存在**。 反向映射的遍历函数如下：
+它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及**下一个节点的位置**。这个**反向映射**用于如下case:如操作系统需要进行**页面回收或换出**，如果**宿主机**需要把**某个客户机物理页**换到**disk**，那么它就需要**修改这个页的物理地址gpa**对应的**spte**，将其设置成**不存在**。 
+
+反向映射的遍历函数如下：
 
 
 
