--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1784,7 +1784,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
                         WARN_ON(!list_empty(&invalid_list));
                         kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu);
                 }
-
+                // 记录该页表页中有多少个spte是unsync状态的
                 if (sp->unsync_children)
                         kvm_make_request(KVM_REQ_MMU_SYNC, vcpu);
 
@@ -1832,6 +1832,8 @@ out:
 一个`kvm_mmu_page`对应于一个`kvm_mmu_page_role`，`kvm_mmu_page_role`记录对应**page的各种属性**。
 
 下面`for_each_valid_sp`是一个遍历链表的宏定义，KVM为了根据**GFN**查找对应的`kvm_mmu_page`，用一个**HASH数组**记录**所有**的`kvm_mmu_page`，**每一个表项**都是一个**链表头**，即根据起始GFN获取到的HASH值相同的，位于一个链表中。这也是HASH表处理冲突常见方法。
+
+如果sp有unsync的子项，标记`KVM_REQ_MMU_SYNC`,下次`vm-entry`时处理，将指向sp的叶框页标记为unsync状态。
 
 如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。
 
