--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2038,7 +2038,7 @@ static void kvm_mmu_commit_zap_page(struct kvm *kvm,
 }
 ```
 
-prepare_zap_oldest_mmu_page将sp放入invalid list.
+`prepare_zap_oldest_mmu_page`将sp放入invalid list.
 
 有三种case调用该函数：
 
