--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2046,7 +2046,7 @@ static void kvm_mmu_commit_zap_page(struct kvm *kvm,
 
 (2) Guest OS memory region 发生变化
 
-(3) ept 加载时mmu_alloc_direct_roots==>make_mmu_pages_available
+(3) ept 加载时`mmu_alloc_direct_roots==>make_mmu_pages_available`
 
 
 
