--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -29,11 +29,11 @@
       - [9.2.2.3. __direct_map(): 构建页表核心](#9223-__direct_map-构建页表核心)
         - [9.2.2.3.1. kvm_mmu_get_page: 创建页表页](#92231-kvm_mmu_get_page-创建页表页)
           - [9.2.2.3.1.1. kvm_mmu_alloc_page(): 申请一个存放页表页](#922311-kvm_mmu_alloc_page-申请一个存放页表页)
-        - [link_shadow_page(): 将下级影子页表页与页表项关联起来](#link_shadow_page-将下级影子页表页与页表项关联起来)
+        - [9.2.2.3.2. link_shadow_page(): 将下级影子页表页与页表项关联起来](#92232-link_shadow_page-将下级影子页表页与页表项关联起来)
       - [9.2.2.4. kvm_tdp_page_fault 小结](#9224-kvm_tdp_page_fault-小结)
-- [kvm_mmu_free_page(): 回收](#kvm_mmu_free_page-回收)
-- [10. 逆向映射机制](#10-逆向映射机制)
-- [11. 参考](#11-参考)
+- [10. kvm_mmu_free_page(): 回收](#10-kvm_mmu_free_page-回收)
+- [11. 逆向映射机制](#11-逆向映射机制)
+- [12. 参考](#12-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1874,7 +1874,7 @@ static struct kvm_mmu_page *kvm_mmu_alloc_page(struct kvm_vcpu *vcpu, int direct
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-##### link_shadow_page(): 将下级影子页表页与页表项关联起来
+##### 9.2.2.3.2. link_shadow_page(): 将下级影子页表页与页表项关联起来
 
 将新分配出来的下一级影子页表页的地址填写该entry对应的SPTE(it.sptep)中
 
@@ -1996,18 +1996,18 @@ struct pte_list_desc {
 
 `__gfn_to_pfn`中，首先调用`gfn_to_memslot`，确定该gfn在哪一个memslot中；之后调用`__gfn_to_pfn_memslot`，该函数首先调用`__gfn_to_hva_many`获得**gfn到hva的映射**，之后调用`hva_to_pfn`获得**hva到pfn的映射**。
 
-之后调用`__direct_map`函数进行映射。
+之后调用 `__direct_map` 函数进行映射。
 
-`__direct_map`中，对非叶子节点的处理调用kvm_mmu_get_page获得一页新的mmu page，之后调用link_shadow_page调用mmu_set_spte将其加入到EPT paging structure中。对于叶子节点，则直接调用mmu_set_spte。mmu_set_spte调用set_spte来设置spte。spte是设置页表结构的最终调用函数。
+`__direct_map` 中，对非叶子节点的处理调用`kvm_mmu_get_page`获得一页新的mmu page，之后调用`link_shadow_page`调用`mmu_set_spte`将其加入到EPT paging structure中。对于叶子节点，则直接调用`mmu_set_spte`。`mmu_set_spte`调用`set_spte`来设置spte。spte是设置页表结构的最终调用函数。
 
 `kvm_mmu_get_page`函数是创建mmu页结构的函数，在该函数主要流程如下：
 1. 设置role
 2. 通过role和gfn在反向映射表中查找kvm mmu page，如果存在之前创建过的page，则返回该page
-3. 调用`kvm_mmu_alloc_page`创建新的struct kvm_mmu_page
+3. 调用`kvm_mmu_alloc_page`创建新的`struct kvm_mmu_page`
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
 
-# kvm_mmu_free_page(): 回收
+# 10. kvm_mmu_free_page(): 回收
 
 当页无效时, 最终会调用`kvm_mmu_free_page()`回收, 这里主要看下何时会回收.
 
@@ -2052,10 +2052,10 @@ static void kvm_mmu_commit_zap_page(struct kvm *kvm,
 
 
 
-# 10. 逆向映射机制
+# 11. 逆向映射机制
 
 
-# 11. 参考
+# 12. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
 
