--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1998,11 +1998,12 @@ struct pte_list_desc {
 
 之后调用 `__direct_map` 函数进行映射。
 
-`__direct_map` 中，对非叶子节点的处理调用`kvm_mmu_get_page`获得一页新的mmu page，之后调用`link_shadow_page`调用`mmu_set_spte`将其加入到EPT paging structure中。对于叶子节点，则直接调用`mmu_set_spte`。`mmu_set_spte`调用`set_spte`来设置spte。spte是设置页表结构的最终调用函数。
+`__direct_map` 中，对非叶子节点的处理调用`kvm_mmu_get_page`获得一页新的mmu page，之后调用`link_shadow_page`调用`mmu_set_spte`将其加入到EPT paging structure中。对于叶子节点，则直接调用`mmu_set_spte`。`mmu_set_spte`调用`set_spte`来设置spte。`set_spte`是设置页表结构的最终调用函数。
 
 `kvm_mmu_get_page`函数是创建mmu页结构的函数，在该函数主要流程如下：
-1. 设置role
-2. 通过role和gfn在反向映射表中查找kvm mmu page，如果存在之前创建过的page，则返回该page
+
+1. 设置 role
+2. 通过 role 和 gfn 在**反向映射表**中查找kvm mmu page，如果存在之前创建过的page，则返回该page
 3. 调用`kvm_mmu_alloc_page`创建新的`struct kvm_mmu_page`
 4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
 5. 调用`init_shadow_page_table`初始化对应的spt
