--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -37,6 +37,7 @@
   - [KVM_REQ_MMU_SYNC](#kvm_req_mmu_sync)
   - [KVM_REQ_TLB_FLUSH](#kvm_req_tlb_flush)
 - [EPT VM-exit 处理](#ept-vm-exit-处理)
+  - [CR3寄存器](#cr3寄存器)
 - [11. 逆向映射机制](#11-逆向映射机制)
 - [12. 参考](#12-参考)
 
@@ -2251,6 +2252,8 @@ static inline void__invept(int ext, u64 eptp, gpa_t gpa)
 
  
 # EPT VM-exit 处理
+
+## CR3寄存器
 
 
 
